# geocomp-lab1

./: CMakeLists.txt  ase.cpp  ase.h  box3f.cpp  box3f.h  input.cpp  input.h  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  matrix4x4f.cpp  matrix4x4f.h  octree.cpp  octree.h  text.cpp  text.h  vector3f.cpp  vector3f.h
GL/: glut.h
data/: knot.ase  teapot.ase
